added sonarLint recommendations.